# valorant-flex

./: BOM.csv  README.md  flex sketch.kra  flex sketch.kra~
LIB.pretty/: DAC.kicad_mod  Display.kicad_mod
blender/: Tianyan.blend1  Tianyan.pcb3d  case.usdz
firmware/: Cargo.toml
firmware/src/: audio.rs  display.rs  irqs.rs  main.rs  request.rs  sd_card.rs  touch.rs
flex/: .gitignore  Right Angle Tact Switch 6x6x8.step  flex.kicad_pcb  flex.kicad_prl  flex.kicad_pro  flex.kicad_sch  fp-lib-table  lib.bak  lib.kicad_sym  ~flex.kicad_pcb.lck
flex/Fallout-PCB/: Fallout-PCB.kicad_prl  Fallout-PCB.kicad_pro  Fallout-PCB.kicad_sch
