[package]
name = "firmware"
version = "0.1.0"
edition = "2024"

[dependencies]
embassy-embedded-hal = { version = "0.6", features = ["defmt"] }
embassy-sync = { version = "0.8", features = ["defmt"] }
embassy-executor = { version = "0.10", features = ["platform-cortex-m", "executor-thread", "executor-interrupt", "defmt"] }
embassy-time = { version = "0.5", features = ["defmt", "defmt-timestamp-uptime"] }
embassy-rp = { version = "0.10", features = ["defmt", "unstable-pac", "time-driver", "critical-section-impl", "rp235xa", "binary-info"] }
embassy-usb = { version = "0.6", features = ["defmt"] }
embassy-net = { version = "0.9", features = ["defmt", "icmp", "tcp", "udp", "raw", "dhcpv4", "medium-ethernet", "dns"] }
embassy-net-wiznet = { version = "0.3", features = ["defmt"] }
embassy-futures = { version = "0.1" }
embassy-usb-logger = { version = "0.6" }
cyw43 = { version = "0.7", features = ["defmt", "firmware-logs"] }
cyw43-pio = { version = "0.10", features = ["defmt"] }

defmt = "1"
defmt-rtt = "1"
fixed = "1"
fixed-macro = "1"

serde = { version = "1", default-features = false, features = ["derive"] }
serde-json-core = "0.5"

# for assign resources example
assign-resources = { git = "https://github.com/adamgreig/assign-resources", rev = "bd22cb7a92031fb16f74a5da42469d466c33383e" }

# for TB6612FNG example
tb6612fng = "1"

cortex-m = { version = "0.7.6" }
#cortex-m = { version = "0.7", features = ["inline-asm"] }
cortex-m-rt = "0.7"
critical-section = "1"
panic-probe = { version = "1", features = ["print-defmt"] }
display-interface-spi = "0.5"
embedded-graphics = "0.8"
mipidsi = "0.8"
display-interface = "0.5"
byte-slice-cast = { version = "1", default-features = false }
smart-leds = "0.3"
heapless = "0.9"
usbd-hid = "0.10"

embedded-hal-1 = { package = "embedded-hal", version = "1" }
embedded-hal-async = "1"
embedded-hal-bus = { version = "0.1", features = ["async"] }
embedded-io-async = { version = "0.7", features = ["defmt"] }
embedded-storage = { version = "0.3" }
static_cell = "2"
portable-atomic = { version = "1", features = ["critical-section"] }
log = "0.4"
embedded-sdmmc = "0.7"

[profile.release]
# Enable generation of debug symbols even on release builds
debug = true

[package.metadata.embassy]
build = [
  { target = "thumbv8m.main-none-eabihf", artifact-dir = "out/examples/rp235x" }
]
